Source/WebCore/svg/SVGScriptElement.h
@@ -71,7 +71,6 @@ private:
     virtual bool hasSourceAttribute() const;
 
     virtual void dispatchLoadEvent();
-    virtual void dispatchErrorEvent();
 
     PassRefPtr<Element> cloneElementWithoutAttributesAndChildren() const;
 
